tests/ui/impl-trait/issues/issue-83919.stderr
error[E0277]: `{integer}` is not a future
  --> $DIR/issue-83919.rs:21:26
   |
LL |     fn get_fut(&self) -> Self::Fut {
   |                          ^^^^^^^^^ `{integer}` is not a future
   |
   = help: the trait `Future` is not implemented for `{integer}`
   = note: {integer} must be a future or must implement `IntoFuture` to be awaited

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
